--- a/back-end/config/config.env
+++ b/back-end/config/config.env
@@ -2,4 +2,4 @@ PORT=4000
 
 MONGO_URI=mongodb+srv://vivekachari2:vivekachari2@cluster0.tancq.mongodb.net/?retryWrites=true
 
-FRONTEND_URL=http://localhost:5173  
+FRONTEND_URL=https://mern-stack-event-planning-project-alpha.vercel.app
